# limp

./: README.md  changelog  limp.cabal
src/Numeric/Limp/: Canon.hs  Error.hs  Program.hs  Rep.hs
src/Numeric/Limp/Canon/: Constraint.hs  Convert.hs  Linear.hs  Pretty.hs  Program.hs  Simplify.hs
src/Numeric/Limp/Canon/Analyse/: Constants.hs
src/Numeric/Limp/Canon/Simplify/: Bounder.hs  Crunch.hs  Subst.hs
src/Numeric/Limp/Program/: Base.hs  Bounds.hs  Constraint.hs  Eval.hs  Linear.hs  Program.hs  ResultKind.hs
src/Numeric/Limp/Rep/: Arbitrary.hs  IntDouble.hs  Rep.hs
src/Numeric/Limp/Solve/Branch/: Simple.hs
src/Numeric/Limp/Solve/Simplex/: Maps.hs  StandardForm.hs
tests/: BranchExample.hs  Convert.hs  Main.hs  SimplexExample.hs  Simplexs.hs  Simplify.hs
tests/Arbitrary/: Assignment.hs  Program.hs  Var.hs
