name:                limp
version:             0.1.0.0
synopsis:            simple, pure Haskell library for Linear Integer/Mixed Programming
-- description:         
license:             MIT
author:              Amos Robinson
maintainer:          amos.robinson@gmail.com
-- category:            
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
        Numeric.Limp.Rep

        Numeric.Limp.Program.Linear
        Numeric.Limp.Program.Constraint
        Numeric.Limp.Program.Program
        Numeric.Limp.Program

        Numeric.Limp.Canon.Linear
        Numeric.Limp.Canon.Constraint
        Numeric.Limp.Canon.Convert
        Numeric.Limp.Canon

  -- other-modules:       
  build-depends:
        base,
        containers,
        lens,
        vector,
        void,
        template-haskell
  ghc-options: -Wall -Werror -fno-warn-orphans -O2
  default-language: Haskell2010
  default-extensions:       TemplateHaskell TypeFamilies FlexibleContexts GeneralizedNewtypeDeriving DataKinds GADTs RankNTypes

Test-Suite test-limp
  hs-source-dirs: test src
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  -- other-modules:       
  build-depends:
        base,
        containers,
        QuickCheck,
        test-framework,
        test-framework-th,
        test-framework-quickcheck2
  ghc-options:      -Wall -fno-warn-orphans -O2
  default-language: Haskell2010
  extensions:       TemplateHaskell
